--- a/components/Footer/elements/FooterBottom/FooterBottom.css
+++ b/components/Footer/elements/FooterBottom/FooterBottom.css
@@ -11,7 +11,7 @@
 }
 
 .footer-bottom__container {
-  max-width: var(--container-2xl);
+  max-width: var(--container-xl);
   margin: 0 auto;
   padding: var(--space-6) var(--space-4);
   display: flex;
