--- a/components/MobileMenu/MobileMenu.css
+++ b/components/MobileMenu/MobileMenu.css
@@ -12,10 +12,10 @@
 
 .mobile-menu-overlay {
   position: fixed;
-  top: var(--header-height);
+  top: var(--header-height-actual, var(--header-height));
   left: 0;
   width: 100%;
-  height: calc(100vh - var(--header-height));
+  height: calc(100vh - var(--header-height-actual, var(--header-height)));
   background: linear-gradient(
     90deg,
     rgba(0, 0, 0, 0.4) 0%,
@@ -56,9 +56,9 @@
 
 .mobile-menu {
   position: fixed;
-  top: var(--header-height);
+  top: var(--header-height-actual, var(--header-height));
   right: 0;
-  height: calc(100vh - var(--header-height));
+  height: calc(100vh - var(--header-height-actual, var(--header-height)));
   width: 320px;
   max-width: 85vw;
   background: var(--color-bg-elevated);
